# QRStyle

./: README.md  pyproject.toml
src/: basic_qr_example.py
src/qrstyle/: __init__.py  builder.py  themes.py
